cf_analysis_results/checkerframework_3.42.0_results_WPI/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8.txt
../dataset/june2020_dataset/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/FilePrinter.java:10: error: (required.method.not.called) $$ 4 $$ method close $$ field outBuffer $$ java.io.BufferedWriter $$ Postconditions written on MustCall methods are missing: @EnsuresCalledMethods(value = "outBuffer", methods = "close"), @EnsuresCalledMethodsOnException(value = "outBuffer", methods = "close") $$ ( 169, 201 ) $$ @MustCall method close may not have been invoked on field outBuffer or any of its aliases.
  static BufferedWriter outBuffer;
                        ^
  The type of object is: java.io.BufferedWriter.
  Reason for going out of scope: Postconditions written on MustCall methods are missing: @EnsuresCalledMethods(value = "outBuffer", methods = "close"), @EnsuresCalledMethodsOnException(value = "outBuffer", methods = "close")
../dataset/june2020_dataset/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/FilePrinter.java:27: error: (missing.creates.mustcall.for) $$ 3 $$ openBuffer $$ rummyj.FilePrinter $$ outBuffer $$ ( 423, 701 ) $$ Method openBuffer re-assigns the non-final, owning field rummyj.FilePrinter.outBuffer, but does not have a corresponding @CreatesMustCallFor annotation.
  public static void openBuffer(String fileName, String fileExtension)
                     ^
../dataset/june2020_dataset/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/FilePrinter.java:31: error: (required.method.not.called) $$ 4 $$ method close $$ new FileWriter(fileName + "." + fileExtension) $$ java.io.FileWriter $$ regular method exit $$ ( 529, 575 ) $$ @MustCall method close may not have been invoked on new FileWriter(fileName + "." + fileExtension) or any of its aliases.
      fileStream = new FileWriter(fileName + "." + fileExtension);
                   ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/FilePrinter.java:32: error: (required.method.not.called) $$ 4 $$ method close $$ field outBuffer $$ java.io.BufferedWriter $$  Non-final owning field might be overwritten $$ ( 583, 625 ) $$ @MustCall method close may not have been invoked on field outBuffer or any of its aliases.
      outBuffer = new BufferedWriter(fileStream);
                ^
  The type of object is: java.io.BufferedWriter.
  Reason for going out of scope:  Non-final owning field might be overwritten
../dataset/june2020_dataset/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/FilePrinter.java:76: error: (flowexpr.parse.error) $$ 1 $$ 'this.outBuffer' in the postcondition EnsuresCalledMethods on the declaration of method 'closeBuffer': Invalid 'this' because "this" isn't allowed here $$ ( 1260, 1410 ) $$ cannot parse the expression 'this.outBuffer' in the postcondition EnsuresCalledMethods on the declaration of method 'closeBuffer': Invalid 'this' because "this" isn't allowed here
  public static void closeBuffer()
                     ^
../dataset/june2020_dataset/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/CSharpVisitor.java:122: error: (flowexpr.parse.error.postcondition) $$ 2 $$ closeBuffer() $$ Invalid 'this' because "this" isn't allowed here $$ ( 3433, 3458 ) $$ error parsing the postcondition expression for closeBuffer()
    FilePrinter.closeBuffer();
                           ^
  cannot parse the expression Invalid 'this' because "this" isn't allowed here
../dataset/june2020_dataset/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/JavaVisitor.java:119: error: (flowexpr.parse.error.postcondition) $$ 2 $$ closeBuffer() $$ Invalid 'this' because "this" isn't allowed here $$ ( 3243, 3268 ) $$ error parsing the postcondition expression for closeBuffer()
		FilePrinter.closeBuffer();
		                       ^
  cannot parse the expression Invalid 'this' because "this" isn't allowed here
../dataset/june2020_dataset/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/PrintVisitor.java:59: error: (flowexpr.parse.error.postcondition) $$ 2 $$ closeBuffer() $$ Invalid 'this' because "this" isn't allowed here $$ ( 879, 904 ) $$ error parsing the postcondition expression for closeBuffer()
		FilePrinter.closeBuffer();
		                       ^
  cannot parse the expression Invalid 'this' because "this" isn't allowed here
8 errors
